kubernetes/test/manifests/ptx-edge-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
  namespace: ptx-edge
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: rest-api
      port:
        number: 8080
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ptx-edge/v1
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
