kubernetes/test/manifests/ptx-edge-chuge_test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-huge-pod
  namespace: ptx-edge
spec:
  containers:
    - name: test-container
      image: busybox:latest
      command: [ "/bin/sh" ]
      args: [ "-c", "sleep infinity" ]
      resources:
        requests:
          cpu: "5000m"
  restartPolicy: Never
