kubernetes/test/manifests/ptx-edge-pdc-deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdc
  template:
    metadata:
      labels:
        app: pdc
    spec:
      nodeSelector:
        connector.dataspace.prometheus-x.org/enabled: "true"
      initContainers:
        - name: pdc-mongodb
          image: ptx/mongodb:8.0.5-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo-port
              containerPort: 27017
              protocol: TCP
          restartPolicy: Always
          livenessProbe:
            httpGet:
              port: mongo-port
            initialDelaySeconds: 3
            periodSeconds: 5
      containers:
        - name: ptx-connector
          image: ptx/connector:1.8.2-slim
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: pdc-port
          volumeMounts:
            - name: pdc-env
              mountPath: /usr/src/app/.env.production
              subPath: .env.production
              readOnly: true
            - name: pdc-config
              mountPath: /usr/src/app/src/config.production.json.template
              subPath: config.production.json.template
              readOnly: true
            - name: pdc-start
              mountPath: /usr/src/app/docker/scripts/start.sh
              subPath: start.sh
              readOnly: true
          command:
            - /bin/sh
            - ./docker/scripts/start.sh
          args:
            - ./src/config.production.json
          envFrom:
            - configMapRef:
                name: pdc-config-env
            - secretRef:
                name: pdc-secrets-env
      hostAliases:
        - hostnames:
            - host.docker.internal
          ip: 172.17.0.1
      volumes:
        - name: pdc-env
          configMap:
            name: pdc-config-files
            items:
              - key: env
                path: .env.production
        - name: pdc-config
          configMap:
            name: pdc-config-files
            items:
              - key: config-template
                path: config.production.json.template
        - name: pdc-start
          configMap:
            name: pdc-config-files
            items:
              - key: start.sh
                path: start.sh
