kubernetes/test/manifests/ptx-edge-pdc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: pdc
  namespace: ptx-edge
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pdc
                port:
                  number: 3000
            path: /ptx-edge/pdc
            pathType: Prefix
