kubernetes/test/manifests/ptx-edge-pdc-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdc
  namespace: ptx-edge
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ptx-edge/pdc`)
      kind: Rule
      services:
        - name: pdc
          port: 3000
      middlewares:
        - name: pdc-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pdc-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /ptx-edge/pdc
