kubernetes/test/manifests/ptx-edge-pdc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pdc
  name: pdc
  namespace: ptx-edge
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: pdc
