kubernetes/test/manifests/ptx-edge-pdc_collocated_test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pz-restricted-pod
  namespace: ptx-edge
spec:
  containers:
    - name: pz-restricted-pod
      image: busybox:latest
      command: [ "/bin/sh" ]
      args: [ "-c", "sleep infinity" ]
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: privacy-zone.dataspace.ptx.org/zone-A
                operator: In
                values:
                  - "true"
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 1
          preference:
            matchExpressions:
              - key: connector.dataspace.ptx.org/enabled
                operator: In
                values:
                  - "true"
  restartPolicy: Never
