kubernetes/test/manifests/ptx-edge-pdc_daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pdc
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
    #app.kubernetes.io/managed-by: controller.ptx-edge.org
spec:
  selector:
    matchLabels:
      app: pdc
  template:
    metadata:
      labels:
        app: pdc
        app.kubernetes.io/name: pdc
        app.kubernetes.io/version: "1.10.1"
        app.kubernetes.io/component: connector
        app.kubernetes.io/part-of: ptx-edge
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      initContainers:
        - name: pdc-mongodb
          image: ptx/mongodb:8.0.5-slim
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
          restartPolicy: Always # Native sidecar container
          livenessProbe:
            httpGet:
              port: 27017
            initialDelaySeconds: 3
            periodSeconds: 5
      containers:
        - name: ptx-connector
          image: ptx/connector:1.10.1-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: 3000
              protocol: TCP
              hostPort: 30003
          resources:
            requests:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - name: pdc-env
              mountPath: "/usr/src/app/.env.production"
              subPath: .env.production
              readOnly: true
            - name: pdc-config
              mountPath: "/usr/src/app/dist/src/config.production.json.template"
              subPath: config.production.json.template
              readOnly: true
            - name: pdc-start
              mountPath: "/usr/src/app/docker/scripts/start.sh"
              subPath: start.sh
              readOnly: true
          command:
            - /bin/sh
            - ./docker/scripts/start.sh
          args:
            - ./dist/src/config.production.json
          envFrom:
            - configMapRef:
                name: pdc-nodeport-env
            - secretRef:
                name: pdc-secrets-env
          env:
            - name: PDC_DOMAIN
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
      hostAliases:
        - hostnames:
            - gw.ptx-core.sandbox.local
          ip: 172.18.0.1
      volumes:
        - name: pdc-env
          configMap:
            name: pdc-config-files
            items:
              - key: .env
                path: .env.production
        - name: pdc-config
          configMap:
            name: pdc-config-files
            items:
              - key: config-template.json
                path: config.production.json.template
        - name: pdc-start
          configMap:
            name: pdc-config-files
            items:
              - key: start.sh
                path: start.sh
