kubernetes/test/manifests/ptx-edge-pdc_daemonset_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdc-zone-a
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-a
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
spec:
  type: ClusterIP
  #clusterIP: None # Headless service without virtual IP, proxying, and port translation
  ports:
    - name: pdc-port
      protocol: TCP
      port: 3000   # Must match the target port in case of headless
      targetPort: 30003
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pdc-zone-a
  labels:
    kubernetes.io/service-name: pdc-zone-a  # Set its value to match the name of the Service
    endpointslice.kubernetes.io/managed-by: controller.ptx-edge.org
addressType: IPv4
ports:
  - name: pdc-port # should match with the name of the service port defined above
    appProtocol: http
    protocol: TCP
    port: 30003
endpoints:
  - addresses:
      #- "172.18.0.3"
      - "${NODE_IP_A}"
---
apiVersion: v1
kind: Service
metadata:
  name: pdc-zone-b
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-b
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
spec:
  type: ClusterIP
  #clusterIP: None # Headless service without virtual IP, proxying, and port translation
  ports:
    - name: pdc-port
      protocol: TCP
      port: 3000   # Must match the target port in case of headless
      targetPort: 30003
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pdc-zone-b
  labels:
    kubernetes.io/service-name: pdc-zone-b  # Set its value to match the name of the Service
    endpointslice.kubernetes.io/managed-by: zone-controller.ptx-edge.org
addressType: IPv4
ports:
  - name: pdc-port # should match with the name of the service port defined above
    appProtocol: http
    protocol: TCP
    port: 30003
endpoints:
  - addresses:
      #- "172.18.0.4"
      - "${NODE_IP_B}"
