kubernetes/test/manifests/ptx-edge-pdc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-a
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pdc
                port:
                  number: 3000
            path: /ptx-edge/pdc
            pathType: Prefix
