kubernetes/test/manifests/ptx-edge-pdc_ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-a
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ptx-edge/pdc`)
      kind: Rule
      services:
        - name: pdc
          port: 3000
      middlewares:
        - name: pdc-zone-a-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pdc-zone-a-stripprefix
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-a
spec:
  stripPrefix:
    prefixes:
      - /ptx-edge/pdc
