kubernetes/test/manifests/ptx-edge-pdc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app.kubernetes.io/name: pdc
    app.kubernetes.io/instance: pdc-zone-a
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
spec:
  selector:
    app: pdc
    privacy-zone.dataspace.ptx.org/zone-A: "true"
  type: ClusterIP
  ports:
    - name: pdc-port
      protocol: TCP
      port: 3000
