kubernetes/test/manifests/ptx-edge-pz_selected_test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pz-restricted-pod
  namespace: ptx-edge
spec:
  containers:
    - name: pz-restricted-pod
      image: busybox:latest
      command: [ "/bin/sh" ]
      args: [ "-c", "sleep infinity" ]
  nodeSelector:
    privacy-zone.dataspace.ptx.org/zone-A: "true"
  restartPolicy: Never
