kubernetes/test/manifests/ptx-edge-restapi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rest-api
  name: rest-api
  namespace: ptx-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rest-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - image: ptx-edge/rest-api:1.0
          imagePullPolicy: IfNotPresent
          name: rest-api
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 300m
              memory: 150Mi
          livenessProbe:
            httpGet:
              port: 8080
              path: /ptx-edge/v1/health
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
