kubernetes/test/manifests/ptx-edge-restapi_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest-api
  name: rest-api
  namespace: ptx-edge
spec:
  selector:
    app: rest-api
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
