kubernetes/test/manifests/ptx-sandbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contract
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: contract-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: contract
    app.kubernetes.io/part-of: ptx-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contract
  template:
    metadata:
      labels:
        app: contract
        app.kubernetes.io/name: sandbox
        app.kubernetes.io/instance: contract-mock
        app.kubernetes.io/version: "1.10.1"
        app.kubernetes.io/component: contract
        app.kubernetes.io/part-of: ptx-core
    spec:
      containers:
        - name: contract-wiremock
          image: ptx-sandbox/contract:1.10.1-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: contract-port
              containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: contract
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: contract-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: contract
    app.kubernetes.io/part-of: ptx-core
spec:
  selector:
    app: contract
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: contract-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: contract
    app.kubernetes.io/part-of: ptx-core
  ports:
    - port: 3001
      protocol: TCP
      targetPort: contract-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: catalog-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: catalog
    app.kubernetes.io/part-of: ptx-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
        app.kubernetes.io/name: sandbox
        app.kubernetes.io/instance: catalog-mock
        app.kubernetes.io/version: "1.10.1"
        app.kubernetes.io/component: catalog
        app.kubernetes.io/part-of: ptx-core
    spec:
      containers:
        - name: catalog-wiremock
          image: ptx-sandbox/catalog:1.10.1-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: catalog-port
              containerPort: 8082
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: catalog-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: catalog
    app.kubernetes.io/part-of: ptx-core
spec:
  ports:
    - port: 3002
      protocol: TCP
      targetPort: catalog-port
  selector:
    app: catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consent
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: consent-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: consent
    app.kubernetes.io/part-of: ptx-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consent
  template:
    metadata:
      labels:
        app: consent
        app.kubernetes.io/name: sandbox
        app.kubernetes.io/instance: consent-mock
        app.kubernetes.io/version: "1.10.1"
        app.kubernetes.io/component: consent
        app.kubernetes.io/part-of: ptx-core
    spec:
      containers:
        - name: consent-mock
          image: ptx-sandbox/consent:1.10.1-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: consent-port
              containerPort: 8083
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: consent
  namespace: ptx-sandbox
  labels:
    app.kubernetes.io/name: sandbox
    app.kubernetes.io/instance: consent-mock
    app.kubernetes.io/version: "1.10.1"
    app.kubernetes.io/component: consent
    app.kubernetes.io/part-of: ptx-core
spec:
  ports:
    - port: 3003
      protocol: TCP
      targetPort: consent-port
  selector:
    app: consent
