kubernetes/test/manifests/traefik-dashboard-ingressroute.yaml
# Enable the dashboard access on http://dashboard.localhost:80/dashboard/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.localhost`)
      services:
        - kind: TraefikService
          name: api@internal
